{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 505,
  "lineage": "b5d42e52-ef8d-e83a-6279-94a9f51ece94",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_ngw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fff6ee72c58bc744",
            "domain": "vpc",
            "id": "eipalloc-0fff6ee72c58bc744",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-52-15-239-193.us-east-2.compute.amazonaws.com",
            "public_ip": "52.15.239.193",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_ngw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013cc2bbfb4ae1665",
            "domain": "vpc",
            "id": "eipalloc-013cc2bbfb4ae1665",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-128-253-184.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.253.184",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725519387:internet-gateway/igw-06077c949feea5bbe",
            "id": "igw-06077c949feea5bbe",
            "owner_id": "851725519387",
            "vpc_id": "vpc-0ec789e32fb4fe6f5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:851725519387:loadbalancer/app/lbserver/c1fe666862ba3636",
            "arn_suffix": "app/lbserver/c1fe666862ba3636",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lbserver-1006488725.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:851725519387:loadbalancer/app/lbserver/c1fe666862ba3636",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lbserver",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b07ca236b61378ed"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0345ea19898a7b343"
              },
              {
                "subnet_id": "subnet-05a03d1492a111fe0"
              }
            ],
            "subnets": [
              "subnet-0345ea19898a7b343",
              "subnet-05a03d1492a111fe0"
            ],
            "vpc_id": "vpc-0ec789e32fb4fe6f5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.lb-secgrp",
            "aws_subnet.sub-pub-1",
            "aws_subnet.sub-pub-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:851725519387:listener/app/lbserver/c1fe666862ba3636/7a59f43b8497d9ec",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:851725519387:targetgroup/servertargetgroup/11b821510ed73ed5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:851725519387:listener/app/lbserver/c1fe666862ba3636/7a59f43b8497d9ec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:851725519387:loadbalancer/app/lbserver/c1fe666862ba3636",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_lb_target_group.tg-group",
            "aws_security_group.lb-secgrp",
            "aws_subnet.sub-pub-1",
            "aws_subnet.sub-pub-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:851725519387:targetgroup/servertargetgroup/11b821510ed73ed5",
            "arn_suffix": "targetgroup/servertargetgroup/11b821510ed73ed5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:851725519387:targetgroup/servertargetgroup/11b821510ed73ed5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "servertargetgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ec789e32fb4fe6f5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fff6ee72c58bc744",
            "association_id": "eipassoc-0d06d85d8d3e3f08c",
            "connectivity_type": "public",
            "id": "nat-0452de10ccadd7048",
            "network_interface_id": "eni-0428db1cf5611ccb8",
            "private_ip": "192.0.2.205",
            "public_ip": "52.15.239.193",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0345ea19898a7b343"
          },
          "dependencies": [
            "aws_eip.eip_ngw1",
            "aws_subnet.sub-pub-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013cc2bbfb4ae1665",
            "association_id": "eipassoc-0861943033c08b9f3",
            "connectivity_type": "public",
            "id": "nat-009d85fe956c61713",
            "network_interface_id": "eni-0cf2b7565803bae4e",
            "private_ip": "192.0.3.39",
            "public_ip": "3.128.253.184",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05a03d1492a111fe0"
          },
          "dependencies": [
            "aws_eip.eip_ngw2",
            "aws_subnet.sub-pub-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rt-assoc-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0891c011f56b70bb91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0452de10ccadd7048",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0891c011f56b70bb9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_ngw1",
            "aws_nat_gateway.ngw-1",
            "aws_route_table.rt-priv-1",
            "aws_subnet.sub-pub-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rt-assoc-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-065e63fbee821bb7d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-009d85fe956c61713",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-065e63fbee821bb7d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_ngw2",
            "aws_nat_gateway.ngw2",
            "aws_route_table.rt-priv-2",
            "aws_subnet.sub-pub-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rt-gw-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06077c949feea5bbe",
            "id": "r-rtb-0365a6faeae0f969f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0365a6faeae0f969f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt-public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725519387:route-table/rtb-0891c011f56b70bb9",
            "id": "rtb-0891c011f56b70bb9",
            "owner_id": "851725519387",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec789e32fb4fe6f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725519387:route-table/rtb-065e63fbee821bb7d",
            "id": "rtb-065e63fbee821bb7d",
            "owner_id": "851725519387",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec789e32fb4fe6f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725519387:route-table/rtb-0365a6faeae0f969f",
            "id": "rtb-0365a6faeae0f969f",
            "owner_id": "851725519387",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec789e32fb4fe6f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-sub-assoc-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d64c64e7b83b46b2",
            "route_table_id": "rtb-0891c011f56b70bb9",
            "subnet_id": "subnet-0c76fb804f4ae9980"
          },
          "dependencies": [
            "aws_route_table.rt-priv-1",
            "aws_subnet.sub-priv-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-sub-assoc-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09002113499c29e2e",
            "route_table_id": "rtb-065e63fbee821bb7d",
            "subnet_id": "subnet-0cc46940ff86a1164"
          },
          "dependencies": [
            "aws_route_table.rt-priv-2",
            "aws_subnet.sub-priv-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-subnet-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07487995064acb3e7",
            "route_table_id": "rtb-0365a6faeae0f969f",
            "subnet_id": "subnet-0345ea19898a7b343"
          },
          "dependencies": [
            "aws_route_table.rt-public",
            "aws_subnet.sub-pub-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-subnet_pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dec66906e20e34a",
            "route_table_id": "rtb-0365a6faeae0f969f",
            "subnet_id": "subnet-05a03d1492a111fe0"
          },
          "dependencies": [
            "aws_route_table.rt-public",
            "aws_subnet.sub-pub-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-secgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725519387:security-group/sg-0b07ca236b61378ed",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b07ca236b61378ed",
            "ingress": [],
            "name": "load_balancer",
            "name_prefix": "",
            "owner_id": "851725519387",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec789e32fb4fe6f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725519387:security-group/sg-096ceb05255ce221a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-096ceb05255ce221a",
            "ingress": [],
            "name": "server",
            "name_prefix": "",
            "owner_id": "851725519387",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec789e32fb4fe6f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725519387:subnet/subnet-0c76fb804f4ae9980",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c76fb804f4ae9980",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725519387",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ec789e32fb4fe6f5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725519387:subnet/subnet-0cc46940ff86a1164",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc46940ff86a1164",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725519387",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ec789e32fb4fe6f5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725519387:subnet/subnet-0345ea19898a7b343",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0345ea19898a7b343",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725519387",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ec789e32fb4fe6f5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725519387:subnet/subnet-05a03d1492a111fe0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a03d1492a111fe0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725519387",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ec789e32fb4fe6f5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725519387:vpc/vpc-0ec789e32fb4fe6f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.0.0.0/16",
            "default_network_acl_id": "acl-0b2de1f223c3f3352",
            "default_route_table_id": "rtb-01662dcc9c9822419",
            "default_security_group_id": "sg-05cd8c00b587adcc7",
            "dhcp_options_id": "dopt-0279373c7273c9060",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec789e32fb4fe6f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01662dcc9c9822419",
            "owner_id": "851725519387"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egr-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725519387:security-group-rule/sgr-0ee4778b4d0ac5467",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ee4778b4d0ac5467",
            "ip_protocol": "all",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-096ceb05255ce221a",
            "security_group_rule_id": "sgr-0ee4778b4d0ac5467",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-server",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egr-rule-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725519387:security-group-rule/sgr-0a701718e220208f3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a701718e220208f3",
            "ip_protocol": "all",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b07ca236b61378ed",
            "security_group_rule_id": "sgr-0a701718e220208f3",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb-secgrp",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ing-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725519387:security-group-rule/sgr-0d2a78bbd704d545a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d2a78bbd704d545a",
            "ip_protocol": "all",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-096ceb05255ce221a",
            "security_group_rule_id": "sgr-0d2a78bbd704d545a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-server",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ing-rule-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851725519387:security-group-rule/sgr-08763d5848e8cfe3c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-08763d5848e8cfe3c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b07ca236b61378ed",
            "security_group_rule_id": "sgr-08763d5848e8cfe3c",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb-secgrp",
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}